nivasa-macros/tests/trybuild/controller_method_pipes_invalid_target.stderr
error: `#[pipe]` only supports controller structs, controller method parameters, and inherent controller methods
 --> tests/trybuild/controller_method_pipes_invalid_target.rs:1:1
  |
1 | #[nivasa_macros::pipe(nivasa_pipes::TrimPipe)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `nivasa_macros::pipe` (in Nightly builds, run with -Z macro-backtrace for more info)
