nivasa-macros/tests/trybuild/controller_method_pipes_invalid_target.rs
#[nivasa_macros::pipe(nivasa_pipes::TrimPipe)]
struct NotAControllerMethod;

fn main() {}
